# smart_churn_pred

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  churn.py  health.py
app/core/: config.py  logging.py  security.py
app/db/: connection.py  init_db.py  models.py
app/ml/: __init__.py  thresholds.py
app/schemas/: request.py  response.py
app/services/: __init__.py  decision_engine.py  model_service.py  rule_service.py
data/processed/: X_test.csv  X_train.csv  cleaned_day2.csv  featured_day2.csv  merged_day1.csv  ml_ready_day2.csv  y_test.csv  y_train.csv
data/raw/: customers.csv  payments.csv  support_tickets.csv  usage_metrics.csv
docs/: api_guide.md  architecture.md  day1_report.md  day2_report.md  day3_report.md  day4_report.md  day5_report.md  day6_report.mo  setup.md
scripts/: build_ml_data.py  clean.py  evaluate_models.py  explore.py  features.py  ingest.py  merge.py  select_best_model.py  test_config.py  test_day4.py  train_models.py  train_test_split.py  validate.py
tests/: conftest.py  test_auth.py  test_churn.py  test_health.py  test_model.py
